[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/menu/menu_scene/NavigationBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/menu/menu_scene/MenuScene.gd" type="Script" id=2]

[node name="MenuSceneControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.784314, 0.984314, 0.913725, 1 )

[node name="SafeAreaControl" type="Control" parent="."]
anchor_left = 0.03
anchor_top = 0.05
anchor_right = 0.97
anchor_bottom = 0.99

[node name="RectangleAspectRatioContainer" type="AspectRatioContainer" parent="SafeAreaControl"]
anchor_right = 1.0
anchor_bottom = 1.0
ratio = 0.5

[node name="MenuSceneContainerControl" type="Control" parent="SafeAreaControl/RectangleAspectRatioContainer"]
margin_right = 282.0
margin_bottom = 564.0

[node name="NavigationBarContainerControl" type="Control" parent="SafeAreaControl/RectangleAspectRatioContainer/MenuSceneContainerControl"]
anchor_right = 1.0
anchor_bottom = 0.071

[node name="NavigationBarControl" parent="SafeAreaControl/RectangleAspectRatioContainer/MenuSceneContainerControl/NavigationBarContainerControl" instance=ExtResource( 1 )]
anchor_bottom = 1.0
margin_bottom = 0.0

[node name="ContentContainerControl" type="Control" parent="SafeAreaControl/RectangleAspectRatioContainer/MenuSceneContainerControl"]
anchor_top = 0.071
anchor_right = 1.0
anchor_bottom = 1.0
